# upstage-python-project

./: main.py  pyproject.toml  srt.ipynb
Crawling/: hbvhiv_coinfec.csv  pyproject.toml
Crawling/crawling/: google_scholar.py
src/: pyqt5_test.py  speech.py  test.py  voice_recog.py
