[tool.poetry]
name = "crawling"
version = "0.1.0"
description = ""
authors = ["d-yeon <d.yeon819@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
